--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div id="p-line" class="progress-line"></div>
 
     <div class="top-header">
-        <div class="brand-text"><span style="color:var(--amazon)">| Amazon</span></div>
+        <div class="brand-text"><span style="color:var(--amazon)">Flipkart | Amazon</span></div>
         <div class="live-count"><i class="fas fa-users"></i> <span id="user-count">1,248</span> Online</div>
     </div>
 
